--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
   <meta charset="UTF-8" />
   <title>Auto Sarge</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -43,19 +43,20 @@
       background: #222;
       border-left: 6px solid #f44336;
       border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.22);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.22);
       padding: 24px;
       margin-bottom: 32px;
       font-size: 1.35em;
     }
 
+    /* Carousel container */
     .carousel-container {
       position: relative;
       max-width: 800px;
       margin: 3rem auto 4rem;
       background: #222;
       border-radius: 12px;
-      box-shadow: 0 2px 12px rgba(0, 0, 0, 0.6);
+      box-shadow: 0 2px 12px rgba(0,0,0,0.6);
       overflow: hidden;
       padding: 2rem 1.5rem;
     }
@@ -65,6 +66,7 @@
       text-align: center;
       padding: 1rem;
       color: #fafafa;
+      transition: opacity 0.5s ease;
     }
 
     .carousel-slide.active {
@@ -95,11 +97,11 @@
     .car-price {
       font-size: 1.8em;
       font-weight: bold;
-      color: #ffffff;
+      color: #fff;
       background: #181818;
       border-radius: 6px;
       padding: 6px 20px;
-      box-shadow: 0 2px 8px rgba(255, 255, 255, 0.15);
+      box-shadow: 0 2px 8px rgba(255,255,255,0.15);
       margin-bottom: 0.8em;
       display: inline-block;
     }
@@ -110,7 +112,7 @@
       border-radius: 8px;
       padding: 14px 24px;
       font-weight: 500;
-      box-shadow: 0 1px 6px rgba(33, 150, 243, 0.09);
+      box-shadow: 0 1px 6px rgba(33,150,243,0.09);
       letter-spacing: 0.5px;
       text-align: left;
       color: #d3d6db;
@@ -138,11 +140,12 @@
       margin-top: 10px;
     }
 
+    /* Arrows */
     .carousel-arrow {
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
-      background: rgba(33, 150, 243, 0.7);
+      background: rgba(33,150,243,0.7);
       border: none;
       color: #fff;
       font-size: 1.6rem;
@@ -151,7 +154,8 @@
       cursor: pointer;
       user-select: none;
       transition: background 0.3s;
-      box-shadow: 0 0 6px rgba(33, 150, 243, 0.9);
+      box-shadow: 0 0 6px rgba(33,150,243,0.9);
+      z-index: 10;
     }
 
     .carousel-arrow:hover {
@@ -189,6 +193,7 @@
       gap: 4px;
     }
 
+    /* Showcase grid */
     .car-showcase {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -203,7 +208,7 @@
       padding: 1rem;
       text-align: center;
       background: #222;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.18);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.18);
     }
 
     .car-card img {
@@ -287,10 +292,10 @@
     <!-- Slide 2 -->
     <div class="carousel-slide">
       <a href="#"><img src="images/car2.jpg" alt="Carro 2" /></a>
-      <div class="car-title">placeholder:car name</div>
-      <div class="car-price">€18,000</div>
+      <div class="car-title">Carro 2</div>
+      <div class="car-price">18.000€</div>
       <div class="car-details">
-        <span><strong>Quilómetros:</strong> 10,000 km</span>
+        <span><strong>Quilómetros:</strong> 10.000 km</span>
         <span><strong>Ano:</strong> 2018</span>
         <span class="extras">Vários extras sob consulta (Clique na imagem para ver mais detalhes)</span>
       </div>
@@ -299,10 +304,10 @@
     <!-- Slide 3 -->
     <div class="carousel-slide">
       <a href="#"><img src="images/car3.jpg" alt="Carro 3" /></a>
-      <div class="car-title">placeholder:car name</div>
-      <div class="car-price">€15,000</div>
+      <div class="car-title">Carro 3</div>
+      <div class="car-price">15.000€</div>
       <div class="car-details">
-        <span><strong>Quilómetros:</strong> 25,000 km</span>
+        <span><strong>Quilómetros:</strong> 25.000 km</span>
         <span><strong>Ano:</strong> 2017</span>
         <span class="extras">Vários extras sob consulta (Clique na imagem para ver mais detalhes)</span>
       </div>
@@ -311,10 +316,10 @@
     <!-- Slide 4 -->
     <div class="carousel-slide">
       <a href="#"><img src="images/car4.jpg" alt="Carro 4" /></a>
-      <div class="car-title">placeholder:car name</div>
-      <div class="car-price">€22,000</div>
+      <div class="car-title">Carro 4</div>
+      <div class="car-price">22.000€</div>
       <div class="car-details">
-        <span><strong>Quilómetros:</strong> 12,000 km</span>
+        <span><strong>Quilómetros:</strong> 12.000 km</span>
         <span><strong>Ano:</strong> 2019</span>
         <span class="extras">Vários extras sob consulta (Clique na imagem para ver mais detalhes)</span>
       </div>
@@ -323,10 +328,10 @@
     <!-- Slide 5 -->
     <div class="carousel-slide">
       <a href="#"><img src="images/car5.jpg" alt="Carro 5" /></a>
-      <div class="car-title">placeholder:car name</div>
-      <div class="car-price">€25,000</div>
+      <div class="car-title">Carro 5</div>
+      <div class="car-price">25.000€</div>
       <div class="car-details">
-        <span><strong>Quilómetros:</strong> 8,500 km</span>
+        <span><strong>Quilómetros:</strong> 8.500 km</span>
         <span><strong>Ano:</strong> 2020</span>
         <span class="extras">Vários extras sob consulta (Clique na imagem para ver mais detalhes)</span>
       </div>
@@ -335,10 +340,10 @@
     <!-- Slide 6 -->
     <div class="carousel-slide">
       <a href="#"><img src="images/car6.jpg" alt="Carro 6" /></a>
-      <div class="car-title">placeholder:car name</div>
-      <div class="car-price">€19,500</div>
+      <div class="car-title">Carro 6</div>
+      <div class="car-price">19.500€</div>
       <div class="car-details">
-        <span><strong>Quilómetros:</strong> 18,000 km</span>
+        <span><strong>Quilómetros:</strong> 18.000 km</span>
         <span><strong>Ano:</strong> 2016</span>
         <span class="extras">Vários extras sob consulta (Clique na imagem para ver mais detalhes)</span>
       </div>
@@ -347,10 +352,10 @@
     <!-- Slide 7 -->
     <div class="carousel-slide">
       <a href="#"><img src="images/car7.jpg" alt="Carro 7" /></a>
-      <div class="car-title">placeholder:car name</div>
-      <div class="car-price">€14,000</div>
+      <div class="car-title">Carro 7</div>
+      <div class="car-price">14.000€</div>
       <div class="car-details">
-        <span><strong>Quilómetros:</strong> 40,000 km</span>
+        <span><strong>Quilómetros:</strong> 40.000 km</span>
         <span><strong>Ano:</strong> 2015</span>
         <span class="extras">Vários extras sob consulta (Clique na imagem para ver mais detalhes)</span>
       </div>
@@ -359,17 +364,17 @@
     <!-- Slide 8 -->
     <div class="carousel-slide">
       <a href="#"><img src="images/car8.jpg" alt="Carro 8" /></a>
-      <div class="car-title">placeholder:car name</div>
-      <div class="car-price">€21,000</div>
+      <div class="car-title">Carro 8</div>
+      <div class="car-price">21.000€</div>
       <div class="car-details">
-        <span><strong>Quilómetros:</strong> 9,000 km</span>
+        <span><strong>Quilómetros:</strong> 9.000 km</span>
         <span><strong>Ano:</strong> 2017</span>
         <span class="extras">Vários extras sob consulta (Clique na imagem para ver mais detalhes)</span>
       </div>
     </div>
 
-    <button class="carousel-arrow left" aria-label="Previous Car">&#10094;</button>
-    <button class="carousel-arrow right" aria-label="Next Car">&#10095;</button>
+    <button class="carousel-arrow left" aria-label="Carro anterior">&#10094;</button>
+    <button class="carousel-arrow right" aria-label="Próximo carro">&#10095;</button>
   </div>
 
   <div class="stock-subtitle">Carros no stock</div>
@@ -379,8 +384,110 @@
   </div>
 
   <div class="car-showcase">
-    <!-- Showcase cars, standardized details (optional, you can update as you want) -->
-    <!-- ... (same as before, omitted for brevity) -->
+    <!-- Showcase cars with consistent details -->
+    <div class="car-card">
+      <a href="#"><img src="images/car1.jpg" alt="Ford Fiesta 1.25 Trend" /></a>
+      <div class="car-info">
+        <div class="car-title">Ford Fiesta 1.25 Trend</div>
+        <span class="car-price">3.590€</span>
+        <div class="car-details">
+          <span><strong>Quilómetros:</strong> 140 677 km</span>
+          <span><strong>Ano:</strong> 2006</span>
+          <span>Vários extras sob consulta (Clique na imagem para ver mais detalhes)</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="car-card">
+      <a href="#"><img src="images/car2.jpg" alt="Carro 2" /></a>
+      <div class="car-info">
+        <div class="car-title">Carro 2</div>
+        <span class="car-price">18.000€</span>
+        <div class="car-details">
+          <span><strong>Quilómetros:</strong> 10.000 km</span>
+          <span><strong>Ano:</strong> 2018</span>
+          <span>Vários extras sob consulta (Clique na imagem para ver mais detalhes)</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="car-card">
+      <a href="#"><img src="images/car3.jpg" alt="Carro 3" /></a>
+      <div class="car-info">
+        <div class="car-title">Carro 3</div>
+        <span class="car-price">15.000€</span>
+        <div class="car-details">
+          <span><strong>Quilómetros:</strong> 25.000 km</span>
+          <span><strong>Ano:</strong> 2017</span>
+          <span>Vários extras sob consulta (Clique na imagem para ver mais detalhes)</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="car-card">
+      <a href="#"><img src="images/car4.jpg" alt="Carro 4" /></a>
+      <div class="car-info">
+        <div class="car-title">Carro 4</div>
+        <span class="car-price">22.000€</span>
+        <div class="car-details">
+          <span><strong>Quilómetros:</strong> 12.000 km</span>
+          <span><strong>Ano:</strong> 2019</span>
+          <span>Vários extras sob consulta (Clique na imagem para ver mais detalhes)</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="car-card">
+      <a href="#"><img src="images/car5.jpg" alt="Carro 5" /></a>
+      <div class="car-info">
+        <div class="car-title">Carro 5</div>
+        <span class="car-price">25.000€</span>
+        <div class="car-details">
+          <span><strong>Quilómetros:</strong> 8.500 km</span>
+          <span><strong>Ano:</strong> 2020</span>
+          <span>Vários extras sob consulta (Clique na imagem para ver mais detalhes)</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="car-card">
+      <a href="#"><img src="images/car6.jpg" alt="Carro 6" /></a>
+      <div class="car-info">
+        <div class="car-title">Carro 6</div>
+        <span class="car-price">19.500€</span>
+        <div class="car-details">
+          <span><strong>Quilómetros:</strong> 18.000 km</span>
+          <span><strong>Ano:</strong> 2016</span>
+          <span>Vários extras sob consulta (Clique na imagem para ver mais detalhes)</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="car-card">
+      <a href="#"><img src="images/car7.jpg" alt="Carro 7" /></a>
+      <div class="car-info">
+        <div class="car-title">Carro 7</div>
+        <span class="car-price">14.000€</span>
+        <div class="car-details">
+          <span><strong>Quilómetros:</strong> 40.000 km</span>
+          <span><strong>Ano:</strong> 2015</span>
+          <span>Vários extras sob consulta (Clique na imagem para ver mais detalhes)</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="car-card">
+      <a href="#"><img src="images/car8.jpg" alt="Carro 8" /></a>
+      <div class="car-info">
+        <div class="car-title">Carro 8</div>
+        <span class="car-price">21.000€</span>
+        <div class="car-details">
+          <span><strong>Quilómetros:</strong> 9.000 km</span>
+          <span><strong>Ano:</strong> 2017</span>
+          <span>Vários extras sob consulta (Clique na imagem para ver mais detalhes)</span>
+        </div>
+      </div>
+    </div>
   </div>
 
   <h2 style="color: #fafafa; margin-top: 0; margin-bottom: 18px;">Contatos</h2>
