--- a/index.html
+++ b/index.html
@@ -292,11 +292,11 @@
     <!-- Slide 2 -->
     <div class="carousel-slide">
       <a href="#"><img src="images/car2.jpg" alt="Carro 2" /></a>
-      <div class="car-title">Carro 2</div>
-      <div class="car-price">18.000€</div>
+      <div class="car-title">Opel Astra 1.7 CDTi Cosmo</div>
+      <div class="car-price">5.890€</div>
       <div class="car-details">
-        <span><strong>Quilómetros:</strong> 10.000 km</span>
-        <span><strong>Ano:</strong> 2018</span>
+        <span><strong>Quilómetros:</strong> 239 400 km</span>
+        <span><strong>Ano:</strong> 2011</span>
         <span class="extras">Vários extras sob consulta (Clique na imagem para ver mais detalhes)</span>
       </div>
     </div>
@@ -304,11 +304,11 @@
     <!-- Slide 3 -->
     <div class="carousel-slide">
       <a href="#"><img src="images/car3.jpg" alt="Carro 3" /></a>
-      <div class="car-title">Carro 3</div>
-      <div class="car-price">15.000€</div>
+      <div class="car-title">Renault Mégane 1.5 dCi Dynamique</div>
+      <div class="car-price">3.490€</div>
       <div class="car-details">
-        <span><strong>Quilómetros:</strong> 25.000 km</span>
-        <span><strong>Ano:</strong> 2017</span>
+        <span><strong>Quilómetros:</strong> 199 989 km</span>
+        <span><strong>Ano:</strong> 2005</span>
         <span class="extras">Vários extras sob consulta (Clique na imagem para ver mais detalhes)</span>
       </div>
     </div>
@@ -316,11 +316,11 @@
     <!-- Slide 4 -->
     <div class="carousel-slide">
       <a href="#"><img src="images/car4.jpg" alt="Carro 4" /></a>
-      <div class="car-title">Carro 4</div>
-      <div class="car-price">22.000€</div>
+      <div class="car-title">MINI 3 Portas One 1.4 D</div>
+      <div class="car-price">4.790€</div>
       <div class="car-details">
-        <span><strong>Quilómetros:</strong> 12.000 km</span>
-        <span><strong>Ano:</strong> 2019</span>
+        <span><strong>Quilómetros:</strong> 343 211 km</span>
+        <span><strong>Ano:</strong> 2004</span>
         <span class="extras">Vários extras sob consulta (Clique na imagem para ver mais detalhes)</span>
       </div>
     </div>
