--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
         year: "2006",
         extras: "Vários extras sob consulta (Clique na imagem para ver mais detalhes)",
         image: "images/car1.jpg",
-        link: "#"
+        link: "https://www.standvirtual.com/carros/anuncio/ford-fiesta-ver-1-25-trend-ID8PSj6T.html?isPreview=1"
       },
       {
         title: "Opel Astra 1.7 CDTi Cosmo",
@@ -323,7 +323,7 @@
         year: "2011",
         extras: "Vários extras sob consulta (Clique na imagem para ver mais detalhes)",
         image: "images/car2.jpg",
-        link: "#"
+        link: "https://www.standvirtual.com/carros/anuncio/opel-astra-ver-1-7-cdti-cosmo-ID8PSd30.html?isPreview=1"
       },
       {
         title: "Renault Mégane 1.5 dCi Dynamique",
@@ -341,16 +341,16 @@
         year: "2004",
         extras: "Vários extras sob consulta (Clique na imagem para ver mais detalhes)",
         image: "images/car4.jpg",
-        link: "#"
+        link: "https://www.standvirtual.com/carros/anuncio/mini-mini-3p-ver-1-4-d-ID8PSt7x.html?isPreview=1"
       },
       {
-        title: "Carro 5",
-        price: "25.000€",
-        kms: "8.500 km",
-        year: "2020",
+        title: "Citroën C5 Tourer 2.0 BlueHDi Seduction J17",
+        price: "9.990€",
+        kms: "152 621 km",
+        year: "2016",
         extras: "Vários extras sob consulta (Clique na imagem para ver mais detalhes)",
         image: "images/car5.jpg",
-        link: "#"
+        link: "https://www.standvirtual.com/carros/anuncio/citroen-c5-tourer-ver-2-0-bluehdi-seduction-j17-ID8PRV3m.html?isPreview=1"
       },
       {
         title: "Carro 6",
