--- a/index.html
+++ b/index.html
@@ -353,31 +353,31 @@
         link: "https://www.standvirtual.com/carros/anuncio/citroen-c5-tourer-ver-2-0-bluehdi-seduction-j17-ID8PRV3m.html?isPreview=1"
       },
       {
-        title: "Carro 6",
-        price: "19.500€",
-        kms: "18.000 km",
-        year: "2016",
+        title: "Toyota Yaris 1.0 VVT-i Sol High Pack MMT",
+        price: "6.490€",
+        kms: "133 856 km",
+        year: "2007",
         extras: "Vários extras sob consulta (Clique na imagem para ver mais detalhes)",
         image: "images/car6.jpg",
-        link: "#"
+        link: "https://www.standvirtual.com/carros/anuncio/toyota-yaris-ver-1-0-vvt-i-sol-high-pack-mmt-ID8PRV3h.html?isPreview=1"
       },
       {
-        title: "Carro 7",
-        price: "14.000€",
-        kms: "40.000 km",
-        year: "2015",
+        title: "Toyota Yaris 1.0 VVT-i Sport+VSC",
+        price: "6.570€",
+        kms: "168 404 km",
+        year: "2010",
         extras: "Vários extras sob consulta (Clique na imagem para ver mais detalhes)",
         image: "images/car7.jpg",
-        link: "#"
+        link: "https://www.standvirtual.com/carros/anuncio/toyota-yaris-ver-1-0-vvt-i-sportplusvsc-ID8PN9kg.html?isPreview=1"
       },
       {
-        title: "Carro 8",
-        price: "21.000€",
-        kms: "9.000 km",
-        year: "2017",
+        title: "Toyota Corolla S/D 1.4 Sol AC",
+        price: "1.950€",
+        kms: "182 230km",
+        year: "2002",
         extras: "Vários extras sob consulta (Clique na imagem para ver mais detalhes)",
         image: "images/car8.jpg",
-        link: "#"
+        link: "https://www.standvirtual.com/carros/anuncio/toyota-corolla-ver-s-d-1-4-sol-ac-ID8PQz6n.html?isPreview=1"
       },
     ];
 
