--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
       },
       {
         title: "Toyota Yaris 1.0 VVT-i Sol High Pack MMT",
-        price: "6.490€",
+        price: "VENDIDO",
         kms: "133 856 km",
         year: "2007",
         extras: "Vários extras sob consulta (Clique na imagem para ver mais detalhes)",
@@ -363,7 +363,7 @@
       },
       {
         title: "Toyota Yaris 1.0 VVT-i Sport+VSC",
-        price: "6.570€",
+        price: "VENDIDO",
         kms: "168 404 km",
         year: "2010",
         extras: "Vários extras sob consulta (Clique na imagem para ver mais detalhes)",
@@ -372,7 +372,7 @@
       },
       {
         title: "Toyota Corolla S/D 1.4 Sol AC",
-        price: "1.950€",
+        price: "VENDIDO",
         kms: "182 230km",
         year: "2002",
         extras: "Vários extras sob consulta (Clique na imagem para ver mais detalhes)",
