--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
         year: "2007",
         extras: "Vários extras sob consulta (Clique na imagem para ver mais detalhes)",
         image: "images/car6.jpg",
-        link: "https://www.standvirtual.com/carros/anuncio/toyota-yaris-ver-1-0-vvt-i-sol-high-pack-mmt-ID8PRV3h.html?isPreview=1"
+        link: "#"
       },
       {
         title: "Toyota Yaris 1.0 VVT-i Sport+VSC",
@@ -368,7 +368,7 @@
         year: "2010",
         extras: "Vários extras sob consulta (Clique na imagem para ver mais detalhes)",
         image: "images/car7.jpg",
-        link: "https://www.standvirtual.com/carros/anuncio/toyota-yaris-ver-1-0-vvt-i-sportplusvsc-ID8PN9kg.html?isPreview=1"
+        link: "#"
       },
       {
         title: "Toyota Corolla S/D 1.4 Sol AC",
@@ -377,7 +377,7 @@
         year: "2002",
         extras: "Vários extras sob consulta (Clique na imagem para ver mais detalhes)",
         image: "images/car8.jpg",
-        link: "https://www.standvirtual.com/carros/anuncio/toyota-corolla-ver-s-d-1-4-sol-ac-ID8PQz6n.html?isPreview=1"
+        link: "#"
       },
     ];
 
